B&L QA/objects/Demo_Equipment_Master__c.object
<CustomObject>
    <description>Created for KOR SOLTA Team.</description>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <label>Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>Thermage</fullName>
                </value>
                <value>
                    <fullName>Liposonix</fullName>
                </value>
                <value>
                    <fullName>C+B</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Name__c</fullName>
        <label>Equipment Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraxel DUAL</fullName>
                </value>
                <value>
                    <fullName>Fraxel SR750</fullName>
                </value>
                <value>
                    <fullName>Fraxel Re:store</fullName>
                </value>
                <value>
                    <fullName>Fraxel Re:fine</fullName>
                </value>
                <value>
                    <fullName>Fraxel Re:pair</fullName>
                </value>
                <value>
                    <fullName>Thermage TC3</fullName>
                </value>
                <value>
                    <fullName>Thermage NXT</fullName>
                </value>
                <value>
                    <fullName>Thermage CPT</fullName>
                </value>
                <value>
                    <fullName>Liposonix</fullName>
                </value>
                <value>
                    <fullName>C+B Permea</fullName>
                </value>
                <value>
                    <fullName>PPX</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
                <value>
                    <fullName>Vaser 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HP_1_S_N__c</fullName>
        <label>HP-1 S/N</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_2_S_N__c</fullName>
        <label>HP-2 S/N</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUAL</fullName>
                </value>
                <value>
                    <fullName>SR750</fullName>
                </value>
                <value>
                    <fullName>Re:store</fullName>
                </value>
                <value>
                    <fullName>Re:fine</fullName>
                </value>
                <value>
                    <fullName>Re:pair</fullName>
                </value>
                <value>
                    <fullName>TC3</fullName>
                </value>
                <value>
                    <fullName>NXT</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>Permea</fullName>
                </value>
                <value>
                    <fullName>PPX</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Vaser2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU_Name__c</fullName>
        <label>SKU Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Serial_No__c</fullName>
        <description>change field type from Pick list to Text</description>
        <label>System Serial No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Demo Equipment Master</label>
    <nameField>
        <displayFormat>DEM-{00000}</displayFormat>
        <label>Demo Equipment Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Equipment Masters</pluralLabel>
    <recordTypes>
        <fullName>KOR_SOLTA_Demo_Equip_Master</fullName>
        <active>true</active>
        <description>Record Type created for Korea SOLTA Team Usage.</description>
        <label>KOR SOLTA Demo Equip Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>